welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: reassignment to val
     if (versLAvant=true) {
                   ^Program:4: error: not found: value nbpas
     	avance(nbpas)
               ^Program:6: error: not found: value nbpas
     	recule(nbpas)
               ^